# rw-ensembles

./: .gitignore  README.md  invpro.lean  lake-manifest.json  lakefile.lean  pyproject.toml  requirements.txt  rwens.lean
configs/models/: deepseek-cot.yaml  deepseek-noncot.yaml  goedel-dpo.yaml  goedel-prover-v2-8b.yaml  goedel-sft-single-pass-vllm.yaml  kimina-distill.yaml
data/: ineq-seed.jsonl  ineq-transformed.jsonl  minif2f-ver.jsonl  proofnet.jsonl
invpro/canonicalization/: README.md  __init__.py  base.py  identity.py  renaming.py  rewriting.py  simp.py  utils.py
invpro/dataset/: __init__.py  add_states.py  generate_augmented.py  utils.py
invpro/equivalence/: __init__.py  certificate.py  checker.py  types.py
invpro/lean/: ExprSize.lean  Rewrites.lean
invpro/logger/: __init__.py  logger.py
invpro/models/: base.py  canonical_llm.py  canonical_st.py  ensemble_llm.py  naive_st.py  single_pass_prover.py  utils.py
invpro/prompt/: deepseek_prover.py  goedel_prover_sft.py  goedel_prover_v2.py  kimina_prover.py  rewrite_augmentation.py  state_to_statement.py  system.py  tactic_prediction.py  variant_renaming.py
invpro/training/: __init__.py  sft.py
invpro/utils/: __init__.py  applier.py  (+8 more)
rwens/: __init__.py
scripts/: run_testing.sh  run_verification.sh  switch_lean_version.sh
tests/: test_equivalence_parser.py  test_lean_proof_text.py  test_rewrite_jsonl_records.py  test_rewriting.py  test_state_to_statement.py  test_state_to_statement_no_compile.py  test_statement_parser.py  test_sync_rewrites_from_generated.py  test_variant_renaming_prompt.py
(+254 files in other folders)
